# MultiTrackerDevelopment

./: .cproject  .gitignore  .project  10_4.txt  10_5.txt  9.txt  9_christopher.txt  CMakeLists.txt  GNUmakefile  README.txt  Xbuildbot.csh  andresEnv  build.env  catenary.txt  make-branch  setupEnvironment-Miklos.sh  setupEnvironment.csh  setupEnvironmentColumbia.csh
Apps/BASimulator/: BASimulator.cc  BASimulator.hh  CMakeLists.txt  CreateProblemVector.bkp  CreateProblemVector.inl  GNUmakefile
Apps/BASimulator/Problems/: BentTwisting.cc  BentTwisting.hh  CollisionTest.cc  CollisionTest.hh  CollisionTestTwo.cc  CollisionTestTwo.hh  CollisionTestWeta.cc  CollisionTestWeta.hh  DelaunayTriangulator.cc  DelaunayTriangulator.hh  DoubleBubbleTest.cc  DoubleBubbleTest.hh  HairyBall.cc  HairyBall.hh  HairyBallWeta.cc  HairyBallWeta.hh  HandTest.cc  HandTest.hh  ImplicitEulerTestsOne.cc  ImplicitEulerTestsOne.hh  MayaSceneTest.cc  MayaSceneTest.hh  MicrotuboliDNA.cc  MicrotuboliDNA.hh  MicrotubuliDNA.cc  MicrotubuliDNA.hh  MultipleRodSolverTest.cc  MultipleRodSolverTest.hh  PlantRootGrowth.cc  PlantRootGrowth.hh  ProblemBase.cc  ProblemBase.hh  RegressionTests.cc  RegressionTests.hh  RodShellTest.cc  RodShellTest.hh  SHO.cc  SHO.hh  SceneParseExample.cc  SceneParseExample.hh  (+11 more)
Apps/WmBunsen/: AEwmBunsenNodeTemplate.mel  AEwmBunsenRodNodeTemplate.mel  AEwmFigCollisionNodeTemplate.mel  AEwmFigRodNodeTemplate.mel  AEwmFigaroNodeTemplate.mel  Beaker.cc  Beaker.hh  CMakeLists.txt  GNUmakefile  RodData.cc  RodData.hh  SplineAttrEval.cc  SplineAttrEval.hh  WmBunsen.mel  WmBunsenCmd.cc  WmBunsenCmd.hh  WmBunsenCollisionMeshNode.cc  WmBunsenCollisionMeshNode.hh  WmBunsenNode.cc  WmBunsenNode.hh  WmBunsenPluginMain.cc  WmBunsenRodNode.cc  WmBunsenRodNode.hh  WmFigCombContext.cc  WmFigCombContext.hh  WmFigCombContextCommand.cc  WmFigCombContextCommand.hh  WmFigCombToolCommand.cc  WmFigCombToolCommand.hh  WmFigConnectionNode.cc  WmFigConnectionNode.hh  WmFigControllerContext.cc  WmFigControllerContext.hh  WmFigControllerContextCommand.cc  WmFigControllerContextCommand.hh  WmFigControllerToolCommand.cc  WmFigControllerToolCommand.hh  WmFigMeshController.cc  WmFigMeshController.hh  WmFigRodBarbInput.cc  (+32 more)
Apps/WmBunsen/Sweeney/: AEwmSweeneyNodeTemplate.mel  AEwmSweeneySubsetNodeTemplate.mel  AEwmSweeneyVolumetricNodeTemplate.mel  WmSweeneyCmd.cc  WmSweeneyCmd.hh  WmSweeneyNode.cc  WmSweeneyNode.cc.snapshot  WmSweeneyNode.hh  WmSweeneyNode.hh.snapshot  WmSweeneyRodManager.cc  WmSweeneyRodManager.hh  WmSweeneyShape.cc  WmSweeneyShape.hh  WmSweeneyShapeIterator.cc  WmSweeneyShapeIterator.hh  WmSweeneyShapeUI.cc  WmSweeneyShapeUI.hh  WmSweeneySubsetNode.cc  WmSweeneySubsetNode.cc.snapshot  WmSweeneySubsetNode.hh  WmSweeneyUtils.cc  WmSweeneyUtils.hh  WmSweeneyVolumetricNode.cc  WmSweeneyVolumetricNode.hh  wmSweeney.mel
Apps/WmBunsen/VolumetricCollisions/: .VolumetricCollisions.hh.swp  VolumetricCollisions.hh  VolumetricCollisionsCPU.cc  VolumetricCollisionsCPU.hh  VolumetricCollisionsGPU.cc  VolumetricCollisionsGPU.hh
Apps/WmBunsen/WmFigaroRodShape/: AEwmFigaroRodShapeTemplate.mel  WmFigaroRodShape.cc  WmFigaroRodShape.hh  WmFigaroRodShapeIterator.cc  WmFigaroRodShapeIterator.hh  WmFigaroRodShapeUI.cc  WmFigaroRodShapeUI.hh
Apps/WmBunsen/constraints/: AEwmFigConstraintNodeTemplate.mel  WmFigConstraintNode.cc  WmFigConstraintNode.hh
Apps/WmBunsen/icons/: GNUmakefile  out_wmBunsenNode.xpm  out_wmBunsenRodNode.xpm  out_wmFigCollisionNode.xpm
Apps/WmBunsen/utils/: WmFigUtils.cc  WmFigUtils.hh
BASim/src/: CMakeLists.txt
BASim/src/Collisions/: BVH.cc  BVH.hh  BVHAABB.cc  BVHAABB.hh  BVHNode.hh  BVH_inline.hh  BoundingBox.hh  BridsonArray.hh  BridsonArray1.hh  BridsonVec.hh  (+28 more)
ElTopo/: CMakeLists.txt
ElTopo/common/: Timer.cpp  Timer.h  array1.h  array2.h  array3.h  array3_utils.h  bfstream.h  ccd_defs.h  ccd_wrapper.cpp  ccd_wrapper.h  collisionqueries.cpp  collisionqueries.h  commonoptions.h  cubic_ccd_wrapper.cpp  gluvi.cpp  hashtable.h  marching_tiles_hires.cpp  marching_tiles_hires.h  mat.h  newparser.h  predicates.cpp  predicates.h  root_parity_ccd_wrapper.cpp  runstats.cpp  runstats.h  util.h  vec.h  wallclocktime.cpp  wallclocktime.h
ElTopo/eltopo3d/: accelerationgrid.cpp  accelerationgrid.h  broadphase.h  broadphasegrid.cpp  broadphasegrid.h  collisionpipeline.cpp  collisionpipeline.h  dynamicsurface.cpp  dynamicsurface.h  edgecollapser.cpp  edgecollapser.h  edgeflipper.cpp  edgeflipper.h  edgesplitter.cpp  edgesplitter.h  eltopo.cpp  eltopo.h  facesplitter.cpp  facesplitter.h  impactzonesolver.cpp  impactzonesolver.h  iomesh.cpp  iomesh.h  meshcutter.cpp  meshcutter.h  meshmerger.cpp  meshmerger.h  meshpincher.cpp  meshpincher.h  meshrenderer.cpp  meshrenderer.h  meshsmoother.cpp  meshsmoother.h  meshsnapper.cpp  meshsnapper.h  nondestructivetrimesh.cpp  nondestructivetrimesh.h  options.h  subdivisionscheme.cpp  subdivisionscheme.h  (+6 more)
VoronoiFluid/: CGAL_wrapper.cpp  CGAL_wrapper.h  CGAL_wrapper3D.cpp  CMakeLists.txt  dualfluidsim3d.cpp  dualfluidsim3d.h  dualpressure3d.cpp  dualpressure3d.h  geometryinit.cpp  geometryinit.h  geometryutils.cpp  geometryutils.h  gluvi.cpp  iomesh.cpp  iomesh.h  lexer.cpp  lexer.h  main.cpp  marching_tiles_hires.cpp  marching_tiles_hires.h  meancurvature.cpp  meancurvature.h  parser.cpp  parser.h  sampleseeder.cpp  sampleseeder.h  tetmesh.cpp  tetmesh.h  tetmeshio.cpp  tetmeshio.h
VoronoiFluid/scripts/: bubble_inversion.txt  colliding_variable_density_bubbles.txt  colliding_variable_density_bubbles2.txt  colliding_variable_density_bubbles_fang.txt  dam_break.txt  dent_adaptive.txt  dent_regular.txt  double_bubble_merge.txt  droplet_on_film.txt  droplet_on_solid.txt  multi_bubbles.txt  sphere_drop.txt  sphere_drop2.txt  surface_tension_barycentric.txt  surface_tension_bunny.txt  surface_tension_cube2.txt  surface_tension_cube_adaptive.txt  surface_tension_cube_regular.txt  surface_tension_generalized.txt  surface_tension_improved.txt  surface_tension_spheres.txt  surface_tension_spheres2.txt  two_bubble_sim.txt
VoronoiFluid/sparse/: cgsolver.h  sparsematrix.h
(+1077 files in other folders)
